--- a/ServerTest/ServerTest/ServerTest.csproj
+++ b/ServerTest/ServerTest/ServerTest.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProtocolHandler.cs" />
+    <Compile Include="ProtocolHelper.cs" />
     <Compile Include="Server.cs" />
   </ItemGroup>
   <ItemGroup>
